[gd_scene load_steps=14 format=4 uid="uid://bccw4n27f5i0b"]

[ext_resource type="Script" path="res://Scripts/BattleScene.gd" id="1_fr4jw"]
[ext_resource type="PackedScene" uid="uid://d0434v71to13p" path="res://Scenes/heart.tscn" id="1_ya8ah"]
[ext_resource type="Script" path="res://Scripts/BattleHUD.gd" id="3_k4yb5"]
[ext_resource type="PackedScene" uid="uid://c1jf61ielnq4x" path="res://Scenes/building_button.tscn" id="4_6dd0l"]
[ext_resource type="Texture2D" uid="uid://bo4li27hyjv8f" path="res://Art/tile_0073.png" id="5_rjrg0"]
[ext_resource type="Texture2D" uid="uid://nfdn2sk4ba5i" path="res://Art/tile_0040.png" id="6_by0yc"]
[ext_resource type="Texture2D" uid="uid://cunjfbu30dd4v" path="res://Art/tile_0102.png" id="7_jb64o"]
[ext_resource type="Texture2D" uid="uid://bqm1dgm0nffx0" path="res://Art/remove.png" id="8_1x0pl"]
[ext_resource type="Texture2D" uid="uid://pourls85jjkf" path="res://Art/play.png" id="9_j4s2m"]
[ext_resource type="TileSet" uid="uid://dsod5255ymecl" path="res://Tilemap/battle_tile_map.tres" id="10_unxy5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mw1k4"]
size = Vector2(960, 480)

[sub_resource type="CircleShape2D" id="CircleShape2D_xvomj"]
radius = 2.0

[sub_resource type="Curve2D" id="Curve2D_ch12j"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1312, -32, 0, 0, 0, 0, 1312, 768, 0, 0, 0, 0, -32, 768, 0, 0, 0, 0, -32, -32, 0, 0, 0, 0, 1312, -32)
}
point_count = 5

[node name="Node2D" type="Node2D"]
script = ExtResource("1_fr4jw")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAHAAMAAAAFAAAAAAAAAAAAAAAGAAAAAAABAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAACAAAAAAALAAAAAAACAAAAAAAMAAAAAAAAAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAPAAEAAAAAAAAAAAAQAAEAAAACAAAAAAARAAEAAAABAAAAAAASAAEAAAAAAAAAAAATAAEAAAAAAAAAAAAUAAEAAAACAAAAAAAVAAEAAAAAAAAAAAAWAAEAAAAAAAAAAAAXAAEAAAAAAAAAAAAYAAEAAAAAAAAAAAAZAAEAAAAAAAAAAAAaAAEAAAAAAAAAAAAbAAEAAAAAAAAAAAAcAAEAAAAAAAAAAAAdAAEAAAAAAAAAAAAeAAEAAAAAAAAAAAAfAAEAAAAHAAMAAAAgAAEAAAAAAAAAAAAhAAEAAAABAAAAAAAiAAEAAAAAAAAAAAAjAAEAAAACAAAAAAAjAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAlAAAAAAABAAAAAAAmAAAAAAAAAAAAAAAnAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAnAAEAAAAAAAAAAAAoAAEAAAAAAAAAAAAoAAIAAAAAAAAAAAAnAAIAAAAAAAAAAAAmAAEAAAAAAAAAAAAlAAEAAAAAAAAAAAAkAAEAAAAAAAAAAAAeAAAAAAACAAAAAAAdAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAbAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAAYAAAAAAAHAAMAAAAXAP//AAAAAAAAAAAWAP//AAAAAAAAAAAVAP//AAABAAAAAAAUAP//AAABAAAAAAATAP//AAAAAAAAAAASAP//AAAAAAAAAAARAP//AAAAAAAAAAAQAP//AAAAAAAAAAAPAP//AAAAAAAAAAAOAP//AAAAAAAAAAANAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAHAAMAAAAPAAAAAAACAAAAAAAQAAAAAAACAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAYAP//AAAAAAAAAAAZAP//AAAAAAAAAAAaAP//AAAAAAAAAAAbAP//AAAAAAAAAAAcAP//AAAAAAAAAAAdAP//AAAAAAAAAAAeAP//AAAAAAAAAAAfAP//AAAAAAAAAAAgAP//AAAAAAAAAAAhAP//AAAAAAAAAAAiAP//AAAAAAAAAAAjAP//AAAAAAAAAAAkAP//AAAAAAAAAAAlAP//AAAAAAAAAAAmAP//AAAAAAAAAAAnAP//AAAAAAAAAAAoAP//AAAAAAAAAAAiAAAAAAAHAAMAAAAhAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAfAAAAAAACAAAAAAAXAAAAAAAAAAAAAAAHAP//AAAAAAAAAAAGAP//AAAAAAAAAAAFAP//AAAAAAAAAAAAAP//AAAAAAAAAAD/////AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAAoABcAAAAAAAAAAAAnABcAAAAAAAAAAAAmABcAAAAAAAAAAAAlABcAAAAAAAAAAAAkABcAAAAAAAAAAAAjABcAAAAAAAAAAAAiABcAAAAAAAAAAAAhABcAAAAAAAAAAAAgABcAAAAAAAAAAAAfABcAAAAAAAAAAAAeABcAAAAAAAAAAAAdABcAAAAAAAAAAAAcABcAAAAAAAAAAAAbABcAAAAAAAAAAAAaABcAAAAAAAAAAAAZABcAAAAAAAAAAAAYABcAAAAAAAAAAAAXABcAAAAAAAAAAAAWABcAAAAAAAAAAAAVABcAAAAAAAAAAAAUABcAAAAAAAAAAAATABcAAAAAAAAAAAASABcAAAAAAAAAAAARABcAAAAAAAAAAAAQABcAAAAAAAAAAAAPABcAAAAAAAAAAAAOABcAAAAAAAAAAAANABcAAAAAAAAAAAAMABcAAAAAAAAAAAALABcAAAAAAAAAAAAKABcAAAAAAAAAAAAJABcAAAAAAAAAAAAIABcAAAAAAAAAAAAHABcAAAAAAAAAAAAGABcAAAAAAAAAAAAFABcAAAAAAAAAAAAEABcAAAAAAAAAAAADABcAAAAAAAAAAAACABcAAAAAAAAAAAABABcAAAAAAAAAAAAAABcAAAAAAAAAAAD//xcAAAAAAAAAAAD//xYAAAAAAAAAAAD//xUAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAD//w4AAAAAAAAAAAD//w8AAAAAAAAAAAD//xAAAAAAAAAAAAD//xEAAAAAAAAAAAD//xIAAAAAAAAAAAD//xMAAAAAAAAAAAD//xQAAAAAAAAAAAD//w0AAAAAAAAAAAD//wwAAAAAAAAAAAAoAAMAAAAAAAAAAAAoAAQAAAAAAAAAAAAoAAUAAAAAAAAAAAAoAAYAAAAAAAAAAAAoAAcAAAAAAAAAAAAoAAgAAAAAAAAAAAAoAAkAAAAAAAAAAAAoAAoAAAAAAAAAAAAoAAsAAAAAAAAAAAAnAAwAAAAAAAAAAAAnAA0AAAAAAAAAAAAnAA4AAAAAAAAAAAAoAAwAAAAAAAAAAAAoAA0AAAAAAAAAAAAoAA4AAAAHAAMAAAAoAA8AAAAAAAAAAAAoABAAAAAAAAAAAAAoABEAAAAAAAAAAAAoABIAAAAAAAAAAAAoABMAAAAAAAAAAAAoABQAAAAAAAAAAAAoABUAAAAAAAAAAAAoABYAAAAAAAAAAAAnABYAAAAAAAAAAAAmABYAAAAAAAAAAAAlABYAAAAAAAAAAAAkABYAAAAAAAAAAAAfABYAAAAAAAAAAAAeABYAAAAAAAAAAAAdABYAAAAAAAAAAAAcABYAAAAAAAAAAAAgABYAAAAAAAAAAAAhABYAAAAAAAAAAAAiABYAAAAAAAAAAAAjABYAAAAAAAAAAAAkABUAAAAAAAAAAAAlABQAAAAAAAAAAAAlABMAAAAAAAAAAAAlABIAAAAAAAAAAAAlABEAAAABAAAAAAAlABAAAAAAAAAAAAAmABQAAAAAAAAAAAAmABMAAAAAAAAAAAAmABIAAAAAAAAAAAAkABQAAAAAAAAAAAAkABMAAAAAAAAAAAAlABUAAAAAAAAAAAAbABYAAAAAAAAAAAAaABYAAAAAAAAAAAAZABYAAAAAAAAAAAAYABYAAAAAAAAAAAAXABYAAAAAAAAAAAAWABYAAAAAAAAAAAAVABYAAAAAAAAAAAAUABYAAAAAAAAAAAATABYAAAAAAAAAAAASABYAAAAAAAAAAAARABYAAAAAAAAAAAAQABYAAAAAAAAAAAAPABYAAAAAAAAAAAAOABYAAAAAAAAAAAANABYAAAAAAAAAAAAMABYAAAAAAAAAAAALABYAAAAAAAAAAAAKABYAAAAAAAAAAAAJABYAAAAAAAAAAAAIABYAAAAAAAAAAAAHABYAAAAAAAAAAAAGABYAAAAAAAAAAAAFABYAAAAAAAAAAAAEABYAAAAAAAAAAAADABYAAAAAAAAAAAACABYAAAAAAAAAAAABABYAAAAAAAAAAAAAABYAAAAAAAAAAAAAABUAAAAAAAAAAAAAABQAAAAAAAAAAAAAABMAAAAAAAAAAAAAABIAAAAAAAAAAAAAABEAAAAAAAAAAAAAABAAAAAAAAAAAAAAAA8AAAAAAAAAAAABAA4AAAAAAAAAAAACAA4AAAAAAAAAAAACAA8AAAABAAAAAAACABAAAAABAAAAAAADABEAAAAAAAAAAAADABIAAAAAAAAAAAADABMAAAAAAAAAAAADABQAAAAAAAAAAAADABUAAAAAAAAAAAADABAAAAAAAAAAAAADAA8AAAAAAAAAAAADAA4AAAAAAAAAAAADAA0AAAAAAAAAAAABABAAAAAAAAAAAAABAA0AAAAAAAAAAAABAAwAAAACAAAAAAABAA8AAAAAAAAAAAABABEAAAAAAAAAAAABABIAAAAAAAAAAAABABMAAAAAAAAAAAABABQAAAAAAAAAAAACABEAAAACAAAAAAACABIAAAAAAAAAAAACABMAAAAAAAAAAAACABQAAAAAAAAAAAACABUAAAAAAAAAAAABABUAAAAAAAAAAAAEABQAAAAAAAAAAAAFABQAAAAAAAAAAAAGABQAAAAAAAAAAAAHABQAAAAAAAAAAAAIABQAAAAAAAAAAAAJABQAAAAAAAAAAAAKABQAAAAAAAAAAAALABQAAAAAAAAAAAAMABMAAAAAAAAAAAANABMAAAAAAAAAAAAOABMAAAAAAAAAAAAPABMAAAAAAAAAAAAQABMAAAAAAAAAAAARABMAAAAHAAMAAAARABQAAAAAAAAAAAAQABQAAAAAAAAAAAAPABQAAAAAAAAAAAAOABQAAAAAAAAAAAANABQAAAABAAAAAAAMABQAAAAAAAAAAAAFABMAAAAAAAAAAAAGABMAAAAAAAAAAAAHABMAAAAAAAAAAAAIABMAAAAAAAAAAAAJABMAAAAAAAAAAAAKABMAAAAAAAAAAAALABMAAAAAAAAAAAASABQAAAACAAAAAAATABMAAAAAAAAAAAAUABMAAAABAAAAAAAVABMAAAACAAAAAAAWABMAAAAAAAAAAAASABMAAAAHAAMAAAAPABIAAAAAAAAAAAAOABIAAAAAAAAAAAANABIAAAAAAAAAAAAMABIAAAAAAAAAAAALABIAAAAAAAAAAAAKABIAAAAAAAAAAAAJABEAAAABAAMAAAAIABEAAAABAAMAAAAKABEAAAABAAMAAAALABEAAAABAAMAAAAMABAAAAABAAIAAAANABAAAAABAAIAAAAOABAAAAABAAIAAAAPABAAAAABAAIAAAAQABAAAAAFAAMAAAARABAAAAABAAIAAAASABAAAAABAAIAAAATABAAAAABAAIAAAAUABAAAAABAAIAAAAVABAAAAABAAIAAAAWAA8AAAABAAIAAAAVAA8AAAABAAIAAAAUAA8AAAABAAIAAAATAA8AAAABAAIAAAASAA8AAAABAAIAAAARAA8AAAABAAIAAAAQAA8AAAABAAIAAAAPAA4AAAABAAIAAAAOAA4AAAABAAIAAAANAA4AAAAEAAMAAAAMAA4AAAABAAIAAAALAA0AAAABAAIAAAAKAA0AAAABAAIAAAAJAA0AAAABAAIAAAAIAA0AAAABAAIAAAAKAAwAAAABAAIAAAALAAwAAAABAAIAAAAMAAwAAAABAAIAAAANAAwAAAABAAIAAAAOAAwAAAABAAIAAAAPAAwAAAABAAIAAAAQAAwAAAABAAIAAAARAAwAAAABAAIAAAASAAwAAAABAAIAAAATAAwAAAABAAIAAAAUAAwAAAABAAIAAAAVAAwAAAABAAIAAAAWAAwAAAABAAIAAAANAAsAAAABAAIAAAAMAAsAAAABAAIAAAALAAsAAAABAAIAAAAKAAsAAAABAAIAAAAOAAsAAAABAAIAAAAPAAsAAAABAAIAAAAQAAsAAAABAAIAAAARAAsAAAABAAIAAAASAAsAAAABAAIAAAATAAsAAAABAAIAAAAUAAsAAAABAAIAAAAXAAwAAAABAAIAAAABAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAHAAMAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAkAAAAAAAAAAAABAAgAAAAAAAAAAAABAAcAAAAAAAAAAAACAAYAAAACAAAAAAACAAUAAAABAAAAAAACAAQAAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAABAAAAAAADAAEAAAAAAAAAAAACAAEAAAACAAAAAAABAAMAAAAHAAMAAAABAAQAAAAAAAAAAAABAAIAAAAAAAAAAAABAAYAAAAAAAAAAAABAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAIAAAAFAAMAAAAAAAEAAAAGAAMAAAABAAEAAAAHAAIAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAAAHAAMAAAAEAAMAAAAAAAAAAAAFAAIAAAAAAAAAAAAGAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAIAAIAAAAHAAMAAAAJAAIAAAAAAAAAAAAKAAIAAAAAAAAAAAALAAIAAAAAAAAAAAAMAAMAAAABAAEAAAANAAMAAAABAAEAAAAOAAMAAAABAAEAAAAPAAMAAAABAAEAAAAQAAMAAAABAAEAAAARAAMAAAABAAEAAAASAAMAAAABAAEAAAATAAMAAAABAAEAAAAUAAMAAAABAAEAAAAVAAMAAAABAAEAAAAWAAMAAAABAAEAAAAWAAQAAAABAAIAAAAVAAQAAAABAAIAAAAUAAQAAAABAAIAAAATAAUAAAAFAAMAAAASAAUAAAABAAIAAAARAAUAAAABAAIAAAAQAAYAAAABAAIAAAAPAAYAAAAEAAMAAAAOAAYAAAABAAIAAAANAAYAAAABAAIAAAAMAAYAAAABAAIAAAALAAYAAAABAAIAAAAKAAYAAAAFAAMAAAAJAAYAAAABAAIAAAAIAAcAAAABAAIAAAAHAAcAAAABAAIAAAAGAAcAAAABAAIAAAAFAAcAAAAAAAIAAAAHAAYAAAABAAIAAAAIAAYAAAABAAIAAAALAAUAAAABAAIAAAAMAAUAAAABAAIAAAANAAUAAAABAAIAAAAOAAUAAAABAAIAAAAPAAUAAAABAAIAAAAQAAUAAAABAAIAAAATAAQAAAABAAIAAAAXAAQAAAABAAIAAAAKAAUAAAABAAIAAAAUAAUAAAABAAIAAAAVAAUAAAABAAIAAAAWAAUAAAABAAIAAAAXAAUAAAABAAIAAAAYAAUAAAABAAIAAAAZAAUAAAAFAAMAAAAaAAUAAAABAAIAAAAbAAUAAAABAAIAAAAcAAYAAAABAAIAAAAdAAYAAAABAAIAAAAbAAYAAAAFAAMAAAAaAAcAAAABAAIAAAAZAAcAAAABAAIAAAAYAAcAAAABAAIAAAAXAAcAAAABAAIAAAAWAAcAAAABAAIAAAAVAAcAAAAFAAMAAAAUAAcAAAABAAIAAAATAAcAAAABAAIAAAASAAcAAAAGAAMAAAARAAcAAAABAAIAAAAQAAcAAAABAAIAAAAPAAcAAAABAAIAAAAOAAcAAAABAAIAAAANAAcAAAABAAIAAAAMAAcAAAAGAAMAAAALAAcAAAABAAIAAAAKAAcAAAABAAIAAAAJAAcAAAABAAIAAAALAAgAAAABAAIAAAAMAAgAAAABAAIAAAANAAgAAAABAAIAAAAOAAgAAAABAAIAAAAPAAgAAAABAAIAAAAQAAgAAAABAAIAAAARAAgAAAABAAIAAAASAAgAAAAFAAMAAAATAAgAAAABAAIAAAAUAAgAAAABAAIAAAAVAAgAAAABAAIAAAAWAAgAAAABAAIAAAAXAAgAAAABAAIAAAAYAAkAAAABAAIAAAAZAAkAAAABAAIAAAAaAAkAAAABAAIAAAAbAAkAAAABAAIAAAAcAAoAAAABAAIAAAAdAAoAAAABAAIAAAAbAAoAAAABAAIAAAAaAAoAAAABAAIAAAAZAAoAAAAEAAMAAAAYAAoAAAABAAIAAAAXAAoAAAABAAIAAAAWAAoAAAABAAIAAAAVAAoAAAABAAIAAAAUAAoAAAABAAIAAAATAAoAAAABAAIAAAASAAoAAAABAAIAAAARAAoAAAABAAIAAAAQAAoAAAABAAIAAAAPAAoAAAAEAAMAAAAJAAsAAAABAAIAAAAVAAsAAAABAAIAAAAWAAsAAAABAAIAAAAXAAsAAAABAAIAAAAYAAsAAAABAAIAAAAZAAwAAAABAAIAAAAaAAwAAAABAAIAAAAbAAwAAAABAAIAAAAcAAwAAAABAAIAAAAdAAwAAAAEAAMAAAAYAAwAAAABAAIAAAAQAA0AAAABAAIAAAARAA0AAAABAAIAAAASAA0AAAABAAIAAAATAA4AAAAEAAMAAAAUAA4AAAABAAIAAAAVAA4AAAABAAIAAAAWAA4AAAABAAIAAAAXAA8AAAABAAIAAAAYAA8AAAABAAIAAAAZAA8AAAABAAIAAAAaABAAAAABAAIAAAAZABAAAAABAAIAAAAYABEAAAABAAMAAAAXABEAAAABAAMAAAAWABEAAAABAAMAAAAVABEAAAABAAMAAAAMAA8AAAABAAIAAAALAA4AAAABAAIAAAAMAA0AAAABAAIAAAANAAoAAAABAAIAAAAOAAkAAAABAAIAAAAQAAQAAAABAAIAAAAQAAIAAAAAAAAAAAAPAAIAAAAAAAAAAAAMAAQAAAABAAIAAAAIAAgAAAABAAIAAAAHAAgAAAABAAIAAAAGAAkAAAABAAIAAAAGAAgAAAABAAIAAAAIAAUAAAABAAIAAAAIAAQAAAABAAIAAAAJAAMAAAABAAEAAAALAAEAAAAAAAAAAAAMAAEAAAABAAAAAAAHAAQAAAABAAIAAAAGAAUAAAABAAIAAAAFAAYAAAAAAAIAAAAEAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAcAAAABAAAAAAADAAYAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAQAAAAAAAAAAAADAAMAAAAAAAAAAAACAAcAAAACAAAAAAABAAoAAAABAAAAAAACAAkAAAAAAAAAAAADAAkAAAAHAAMAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAIAAAAHAAkAAAABAAIAAAAGAAoAAAABAAIAAAAFAAsAAAAAAAIAAAAFAAwAAAAAAAIAAAAEAA0AAAAAAAAAAAAGAAsAAAABAAIAAAAHAAoAAAABAAIAAAAIAAkAAAABAAIAAAAJAAkAAAABAAIAAAAKAAgAAAABAAIAAAAMAAkAAAABAAIAAAALAAoAAAABAAIAAAAKAAoAAAABAAIAAAAIAAsAAAABAAIAAAAHAAwAAAABAAIAAAAGAAwAAAABAAIAAAAFAA0AAAAAAAIAAAAEAA4AAAAAAAAAAAAHAAsAAAABAAIAAAAIAAoAAAABAAIAAAALAAkAAAABAAIAAAAJAAoAAAAEAAMAAAASAAYAAAABAAIAAAATAAYAAAABAAIAAAAPAAkAAAABAAIAAAAJAAwAAAABAAIAAAAIAAwAAAABAAIAAAAJAAUAAAAFAAMAAAAKAAQAAAABAAIAAAALAAMAAAABAAEAAAAMAAIAAAAAAAAAAAAKAAMAAAABAAEAAAAIAAMAAAABAAEAAAAGAAQAAAABAAIAAAAKAAEAAAAAAAAAAAANAAIAAAAAAAAAAAALAAQAAAABAAIAAAANAAQAAAABAAIAAAAOAAQAAAABAAIAAAAHAAMAAAABAAEAAAAEAAYAAAAAAAAAAAAFAAUAAAAAAAIAAAAHAAUAAAAGAAMAAAAGAAYAAAABAAIAAAACAAoAAAAAAAAAAAACAAgAAAAAAAAAAAACAAsAAAAAAAAAAAACAA0AAAAAAAAAAAADAAwAAAABAAAAAAAEAAsAAAAAAAAAAAAFAAoAAAAAAAIAAAACAAwAAAAHAAMAAAADAAsAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAkAAAAAAAIAAAAGAA0AAAABAAIAAAAcAAgAAAABAAIAAAAbAAgAAAABAAIAAAAQAA4AAAABAAIAAAAOAA8AAAABAAIAAAAVAAkAAAABAAIAAAAZAAYAAAABAAIAAAAbAAQAAAABAAIAAAAaAAYAAAABAAIAAAAYAAgAAAABAAIAAAAFABEAAAAAAAMAAAAiABEAAAACAAMAAAAiAAMAAAACAAEAAAAOAAIAAAAAAAAAAAARAAIAAAAAAAAAAAASAAIAAAAAAAAAAAATAAIAAAAAAAAAAAAUAAIAAAAAAAAAAAAVAAIAAAAAAAAAAAAWAAIAAAAAAAAAAAAXAAIAAAAAAAAAAAAYAAIAAAAAAAAAAAAZAAIAAAAAAAAAAAAaAAIAAAAAAAAAAAAbAAIAAAAAAAAAAAAcAAIAAAAAAAAAAAAdAAIAAAAAAAAAAAAeAAIAAAAAAAAAAAAfAAIAAAAAAAAAAAAgAAIAAAAAAAAAAAAhAAIAAAAAAAAAAAAiAAIAAAAAAAAAAAAjAAIAAAAAAAAAAAAjAAMAAAAAAAAAAAAjAAQAAAAAAAAAAAAjAAUAAAAAAAAAAAAjAAYAAAAAAAAAAAAjAAcAAAAAAAAAAAAjAAgAAAAAAAAAAAAjAAkAAAAAAAAAAAAjAAoAAAAAAAAAAAAjAAsAAAAAAAAAAAAjAAwAAAAAAAAAAAAjAA0AAAAAAAAAAAAjAA4AAAAAAAAAAAAjAA8AAAAAAAAAAAAjABAAAAAAAAAAAAAjABEAAAAAAAAAAAAjABIAAAAAAAAAAAAiABIAAAAAAAAAAAAhABIAAAAAAAAAAAAhABMAAAAAAAAAAAAgABMAAAACAAAAAAAfABMAAAAAAAAAAAAeABMAAAAAAAAAAAAeABIAAAAAAAAAAAAfABIAAAAAAAAAAAAgABIAAAAAAAAAAAAdABMAAAAAAAAAAAAcABMAAAAAAAAAAAAcABIAAAAAAAAAAAAbABIAAAAAAAAAAAAaABIAAAAAAAAAAAAZABIAAAAAAAAAAAAYABIAAAAAAAAAAAAXABIAAAAAAAAAAAAWABIAAAAAAAAAAAAVABIAAAAAAAAAAAAUABIAAAAAAAAAAAATABIAAAAAAAAAAAASABIAAAAAAAAAAAARABIAAAAAAAAAAAAQABIAAAAAAAAAAAAJABIAAAAAAAAAAAAIABIAAAAAAAAAAAAHABIAAAAAAAAAAAAGABIAAAAAAAAAAAAFABIAAAAAAAAAAAAEABIAAAAAAAAAAAAEABAAAAAAAAAAAAAEAA8AAAAAAAAAAAAEABEAAAAAAAAAAAAEAAwAAAAAAAAAAAAEAAkAAAAAAAAAAAADAAoAAAAAAAAAAAABAAsAAAABAAAAAAAdABIAAAAAAAAAAAAlAAoAAAAAAAAAAAAlAAkAAAACAAAAAAAlAAgAAAAHAAMAAAAlAAcAAAAAAAAAAAAlAAYAAAAAAAAAAAAlAAUAAAAAAAAAAAAlAAQAAAAAAAAAAAAkAAQAAAAAAAAAAAAkAAMAAAAAAAAAAAAkAAIAAAAAAAAAAAAlAAIAAAAAAAAAAAAmAAIAAAAAAAAAAAAnAAMAAAAAAAAAAAAmAAMAAAAAAAAAAAAlAAMAAAAHAAMAAAAmAAQAAAAAAAAAAAAnAAQAAAAAAAAAAAAmAAUAAAACAAAAAAAkAAUAAAAAAAAAAAAkAAYAAAAAAAAAAAAkAAcAAAAAAAAAAAAkAAgAAAAAAAAAAAAkAAkAAAAAAAAAAAAkAAoAAAAAAAAAAAAkAAsAAAACAAAAAAAkAAwAAAAAAAAAAAAkAA0AAAAAAAAAAAAkAA4AAAAAAAAAAAAkAA8AAAAAAAAAAAAmAAwAAAAAAAAAAAAmAAsAAAAAAAAAAAAmAAoAAAAAAAAAAAAmAAkAAAAAAAAAAAAmAAgAAAAHAAMAAAAmAAcAAAAAAAAAAAAnAAgAAAAAAAAAAAAnAAkAAAAAAAAAAAAnAAcAAAAAAAAAAAAnAAYAAAAAAAAAAAAnAAUAAAAAAAAAAAAnAAoAAAAAAAAAAAAnAAsAAAAAAAAAAAAnAA8AAAAAAAAAAAAnABAAAAAAAAAAAAAnABEAAAAAAAAAAAAnABIAAAAAAAAAAAAnABMAAAAAAAAAAAAnABQAAAAAAAAAAAAnABUAAAAAAAAAAAAmABUAAAAAAAAAAAAlAA8AAAAAAAAAAAAlAA4AAAAAAAAAAAAlAA0AAAABAAAAAAAlAAwAAAAAAAAAAAAlAAsAAAAAAAAAAAAmAA4AAAACAAAAAAAmAA8AAAAAAAAAAAAkABEAAAAAAAAAAAAjABMAAAABAAAAAAAjABQAAAABAAAAAAAiABQAAAACAAAAAAAbABMAAAAHAAMAAAAaABMAAAAAAAAAAAAZABMAAAAAAAAAAAAYABMAAAAAAAAAAAAXABMAAAAAAAAAAAAVABQAAAAAAAAAAAAUABQAAAAAAAAAAAATABQAAAAAAAAAAAAWABQAAAABAAAAAAAXABQAAAAAAAAAAAAYABQAAAAAAAAAAAAZABQAAAAAAAAAAAAaABQAAAAAAAAAAAAbABQAAAAAAAAAAAAcABQAAAAAAAAAAAAdABQAAAABAAAAAAAeABQAAAAAAAAAAAAfABQAAAAAAAAAAAAgABQAAAAAAAAAAAAhABQAAAAAAAAAAAAbABUAAAAAAAAAAAAaABUAAAAAAAAAAAAZABUAAAAAAAAAAAAYABUAAAAAAAAAAAAXABUAAAAAAAAAAAAWABUAAAAAAAAAAAAVABUAAAAAAAAAAAAUABUAAAAAAAAAAAATABUAAAAAAAAAAAAEABMAAAAAAAAAAAAFABUAAAAAAAAAAAAEABUAAAAAAAAAAAAGABUAAAAAAAAAAAAIABUAAAAAAAAAAAAJABUAAAAAAAAAAAAKABUAAAAAAAAAAAALABUAAAAHAAMAAAAMABUAAAAAAAAAAAANABUAAAAAAAAAAAAOABUAAAAAAAAAAAAPABUAAAAAAAAAAAAQABUAAAAAAAAAAAARABUAAAABAAAAAAASABUAAAABAAAAAAAiABUAAAAAAAAAAAAjABUAAAABAAAAAAAhABUAAAAAAAAAAAAgABUAAAAAAAAAAAAfABUAAAAAAAAAAAAeABUAAAAAAAAAAAAdABUAAAACAAAAAAAcABUAAAAAAAAAAAAkABAAAAAAAAAAAAAiABMAAAAAAAAAAAAkABIAAAACAAAAAAAmABEAAAAAAAAAAAAmABAAAAAAAAAAAAAmAA0AAAAAAAAAAAAFAA4AAAAAAAIAAAAFAA8AAAAAAAIAAAAFABAAAAAAAAIAAAAXAAMAAAABAAEAAAAYAAMAAAABAAEAAAAZAAMAAAABAAEAAAAaAAMAAAABAAEAAAAbAAMAAAABAAEAAAAcAAMAAAABAAEAAAAdAAMAAAABAAEAAAAeAAMAAAABAAEAAAAfAAMAAAABAAEAAAAgAAMAAAABAAEAAAAhAAMAAAABAAEAAAAiAAQAAAACAAIAAAAiAAUAAAACAAIAAAAiAAYAAAACAAIAAAAiAAcAAAACAAIAAAAiAAgAAAACAAIAAAAiAAkAAAACAAIAAAAiAAoAAAACAAIAAAAiAAsAAAACAAIAAAAiAAwAAAACAAIAAAAiAA0AAAACAAIAAAAiAA4AAAACAAIAAAAiAA8AAAACAAIAAAAiABAAAAACAAIAAAAhABEAAAABAAMAAAAgABEAAAABAAMAAAAfABEAAAABAAMAAAAeABEAAAABAAMAAAAdABEAAAABAAMAAAAcABEAAAABAAMAAAAbABEAAAABAAMAAAAaABEAAAABAAMAAAAZABEAAAABAAMAAAAUABEAAAABAAMAAAATABEAAAABAAMAAAASABEAAAABAAMAAAARABEAAAABAAMAAAAQABEAAAABAAMAAAAPABEAAAABAAMAAAAOABEAAAABAAMAAAANABEAAAABAAMAAAAMABEAAAABAAMAAAAHABEAAAABAAMAAAAGABEAAAABAAMAAAAIAA8AAAABAAIAAAAIAA4AAAAGAAMAAAAHAA4AAAABAAIAAAAHAA0AAAABAAIAAAAGAA4AAAABAAIAAAAGAA8AAAABAAIAAAARAAYAAAABAAIAAAAQAAkAAAABAAIAAAARAAkAAAABAAIAAAASAAkAAAABAAIAAAATAAkAAAABAAIAAAAUAAkAAAABAAIAAAAZAAsAAAABAAIAAAAOAAoAAAABAAIAAAAMAAoAAAABAAIAAAAPAAQAAAABAAIAAAAJAAQAAAABAAIAAAAUAAYAAAABAAIAAAAVAAYAAAABAAIAAAASAAQAAAABAAIAAAAcAAUAAAABAAIAAAAdAAUAAAABAAIAAAAeAAUAAAABAAIAAAAfAAUAAAABAAIAAAAgAAUAAAABAAIAAAAhAAUAAAABAAIAAAAhAAQAAAABAAIAAAAhAAYAAAABAAIAAAAhAAcAAAABAAIAAAAhAAgAAAABAAIAAAAhAAkAAAABAAIAAAAhAAoAAAABAAIAAAAhAAsAAAABAAIAAAAhAAwAAAABAAIAAAAhAA0AAAABAAIAAAAgAA0AAAABAAIAAAAgAA4AAAABAAIAAAAgAA8AAAAFAAMAAAAhAA8AAAABAAIAAAAhABAAAAABAAIAAAAhAA4AAAABAAIAAAAfAA4AAAABAAIAAAAfAA8AAAABAAIAAAAeAA8AAAABAAIAAAAdAA8AAAABAAIAAAAcAA8AAAABAAIAAAAbAA8AAAABAAIAAAAaAA8AAAABAAIAAAALABAAAAABAAIAAAAKABAAAAABAAIAAAAJABAAAAAFAAMAAAAIABAAAAABAAIAAAAHABAAAAABAAIAAAAGABAAAAABAAIAAAAHAA8AAAABAAIAAAAJAA4AAAABAAIAAAARAAQAAAABAAIAAAAYAAQAAAABAAIAAAAZAAQAAAABAAIAAAAaAAQAAAABAAIAAAAcAAQAAAABAAIAAAAdAAQAAAABAAIAAAAeAAQAAAAFAAMAAAAfAAQAAAABAAIAAAAgAAQAAAABAAIAAAAgAAYAAAABAAIAAAAgAAcAAAABAAIAAAAgAAgAAAABAAIAAAAgAAkAAAABAAIAAAAgAAoAAAABAAIAAAAgAAsAAAABAAIAAAAgAAwAAAABAAIAAAAfAA0AAAABAAIAAAAfABAAAAABAAIAAAAgABAAAAABAAIAAAAeABAAAAABAAIAAAAdABAAAAABAAIAAAAcABAAAAABAAIAAAAbABAAAAABAAIAAAAYABAAAAABAAIAAAAXABAAAAABAAIAAAAWABAAAAABAAIAAAANAA8AAAABAAIAAAALAA8AAAABAAIAAAAKAA8AAAABAAIAAAAJAA8AAAABAAIAAAAPAA8AAAABAAIAAAAKAA4AAAABAAIAAAAJAAgAAAABAAIAAAATAA0AAAABAAIAAAAXAA0AAAABAAIAAAAWAA0AAAABAAIAAAAVAA0AAAABAAIAAAAZAA4AAAABAAIAAAAaAA4AAAABAAIAAAAbAA4AAAABAAIAAAAbAA0AAAABAAIAAAAcAA0AAAABAAIAAAAdAA0AAAABAAIAAAAeAA0AAAABAAIAAAAfAAwAAAABAAIAAAAfAAsAAAABAAIAAAAfAAoAAAABAAIAAAAfAAkAAAABAAIAAAAfAAgAAAABAAIAAAAfAAcAAAABAAIAAAAfAAYAAAAEAAMAAAAYAAYAAAAFAAMAAAAXAAYAAAABAAIAAAAWAAYAAAABAAIAAAAbAAcAAAABAAIAAAAcAAcAAAABAAIAAAAaAAgAAAAFAAMAAAAZAAgAAAABAAIAAAAXAAkAAAABAAIAAAAWAAkAAAABAAIAAAAcAAkAAAABAAIAAAAdAAkAAAAFAAMAAAAeAAoAAAABAAIAAAAdAAsAAAABAAIAAAAcAAsAAAABAAIAAAAbAAsAAAABAAIAAAAaAAsAAAAGAAMAAAAeAAsAAAABAAIAAAAaAA0AAAABAAIAAAAeAA4AAAAGAAMAAAAdAA4AAAABAAIAAAAcAA4AAAABAAIAAAAeAAwAAAABAAIAAAAdAAgAAAABAAIAAAAeAAgAAAABAAIAAAAeAAcAAAABAAIAAAAeAAYAAAABAAIAAAAdAAcAAAABAAIAAAAeAAkAAAABAAIAAAAZAA0AAAABAAIAAAAYAA0AAAABAAIAAAAXAA4AAAAFAAMAAAAYAA4AAAABAAIAAAASAA4AAAABAAIAAAARAA4AAAABAAIAAAAUAA0AAAABAAIAAAAPAA0AAAABAAIAAAAOAA0AAAABAAIAAAANAA0AAAAFAAMAAAAKAAkAAAABAAIAAAANAAkAAAABAAIAAAAHABUAAAAAAAAAAAAmAAYAAAAAAAAAAAA=")
tile_set = ExtResource("10_unxy5")

[node name="HeartStatic" parent="." groups=["buildings"] instance=ExtResource("1_ya8ah")]

[node name="BattleHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 736.0
script = ExtResource("3_k4yb5")

[node name="PlanningButtonsPanel" type="Panel" parent="BattleHUD"]
layout_mode = 0
offset_left = 1216.0
offset_right = 1280.0
offset_bottom = 704.0

[node name="BuildingButton" parent="BattleHUD/PlanningButtonsPanel" instance=ExtResource("4_6dd0l")]
layout_mode = 0
tooltip_text = "Build a regular building. Is destroyed immediately after being hit"
texture_normal = ExtResource("5_rjrg0")

[node name="WallButton" parent="BattleHUD/PlanningButtonsPanel" instance=ExtResource("4_6dd0l")]
layout_mode = 0
offset_top = 96.0
offset_bottom = 160.0
tooltip_text = "Build a wall. Wall can endure 5 hits."
texture_normal = ExtResource("6_by0yc")

[node name="TurretButton" parent="BattleHUD/PlanningButtonsPanel" instance=ExtResource("4_6dd0l")]
layout_mode = 0
offset_top = 192.0
offset_bottom = 256.0
tooltip_text = "Build a turret. Turret can endure 3 hits and shoots nearby enemies."
texture_normal = ExtResource("7_jb64o")

[node name="RemoveButton" type="TextureButton" parent="BattleHUD/PlanningButtonsPanel"]
layout_mode = 0
offset_top = 576.0
offset_right = 64.0
offset_bottom = 640.0
texture_normal = ExtResource("8_1x0pl")
ignore_texture_size = true
stretch_mode = 0

[node name="BattlePanel" type="Panel" parent="BattleHUD"]
layout_mode = 0
offset_top = 608.0
offset_right = 288.0
offset_bottom = 736.0

[node name="PlayButton" type="TextureButton" parent="BattleHUD/BattlePanel"]
layout_mode = 0
offset_left = 192.0
offset_top = 32.0
offset_right = 256.0
offset_bottom = 96.0
texture_normal = ExtResource("9_j4s2m")
ignore_texture_size = true
stretch_mode = 0

[node name="Score" type="Label" parent="BattleHUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "00:00:00"

[node name="ScoreTimer" type="Timer" parent="BattleHUD"]
wait_time = 0.05

[node name="BuildableArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildableArea"]
position = Vector2(640, 336)
shape = SubResource("RectangleShape2D_mw1k4")

[node name="MousePoint" type="AnimatableBody2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="MousePoint"]
shape = SubResource("CircleShape2D_xvomj")

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ch12j")

[node name="SpawnFollow" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(1312, -32)
progress = 4288.0

[node name="SpawnTimer" type="Timer" parent="SpawnPath"]
wait_time = 1.5

[connection signal="pressed" from="BattleHUD/PlanningButtonsPanel/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="BattleHUD/BattlePanel/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="timeout" from="BattleHUD/ScoreTimer" to="BattleHUD" method="_on_score_timer_timeout"]
[connection signal="timeout" from="SpawnPath/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
